--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -12,9 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:gravity="start|top"
         android:inputType="textMultiLine"
-        android:text="Scheduler:\n Click purple plus at bottom right to create new event!"
+        android:text="Click purple plus button at bottom right to create new event!"
         android:textSize="24sp"
         android:textAlignment="center"/>
 
